# ghostpost

./: db.sqlite3  pyproject.toml
GhostPost/: settings.py  urls.py
homepage/: admin.py  forms.py  models.py  views.py
homepage/migrations/: 0001_initial.py
templates/: index.html
